[package]
name = "xlauth"
description = "A small utility to send TOTP authenticator codes to XIV Launcher"
authors = ["iryoku"]
version = "1.1.0"
edition = "2021"

[[bin]]
name = "xlauth"
path = "src/main.rs"

[[bin]]
name = "xlauth-cli"
path = "src/wrapper.rs"
required-features = ["cli-wrapper"]

[features]
cli-wrapper = []

[dependencies]
clap = { version = "4.5.53", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
expand_str = "0.1.1"
humantime = "2.3.0"
keyring = "2.3.3"
totp-rs = { version = "5.7.0", features = ["otpauth", "zeroize"] }
zeroize = "1.8.2"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "process", "io-util", "io-std"] }
windows-sys = { version = "0.61.2", features = ["Win32", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
